--- a/app/assets/sass/elements/_layout.scss
+++ b/app/assets/sass/elements/_layout.scss
@@ -58,6 +58,3 @@
   @include grid-column(2 / 3);
 }
 
-.column-full {
-  @include grid-column(1 / 1);
-}
